fix/docs-and-url-api
